tests/success/pointer_arithmetic_resolve.bz
function test()
{
	(consteval {
		mut p: ?*S = null;
		if (p != null)
		{
			++p;
			--p;
			p += 1;
			p -= 1;
			p + 1;
			p - 1;
			1 + p;
			p - p;
		}
	});
}

struct S
{
	.i: i32;
}
