tests/error/comptime/pointer_difference16.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		__builtin_comptime_free(p);

		p - p;
	});
}
